Fixed several bugs (running the parser, reading regular expressions, etc)